--- a/mockers_derive/Cargo.toml
+++ b/mockers_derive/Cargo.toml
@@ -8,11 +8,12 @@ repository = "https://github.com/kriomant/mockers"
 version = "0.12.1"
 
 [dependencies]
-syn = { version = "0.11.11", features = ["full"] }
-quote = "0.3.15"
+syn = { version = "0.14.8", features = ["full", "extra-traits"] }
+quote = "0.6"
 itertools = "0.4.13"
-lazy_static = "0.2.9"
+lazy_static = "1.1.0"
 synom = "0.11.3"
+proc-macro2 = "0.4.13"
 
 [build-dependencies]
 
